// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with 1 rows. 1`] = `
<div
  className="c-virtual-list-container"
  style={
    Object {
      "height": 300,
      "overflowX": "auto",
      "width": "100vw",
      "willChange": "transform",
    }
  }
>
  <div
    className="c-virtual-list"
    style={
      Object {
        "height": 10000000,
        "minHeight": "100%",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <span
      className="row-1"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      1
    </span>
  </div>
</div>
`;

exports[`should render with 30 rows. 1`] = `
<div
  style={
    Object {
      "height": 300,
      "overflowX": "auto",
      "width": "100vw",
      "willChange": "transform",
    }
  }
>
  <div
    style={
      Object {
        "height": 10000000,
        "minHeight": "100%",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <span
      className="row-1"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      1
    </span>
    <span
      className="row-2"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 100,
        }
      }
    >
      2
    </span>
    <span
      className="row-3"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 200,
        }
      }
    >
      3
    </span>
    <span
      className="row-4"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 300,
        }
      }
    >
      4
    </span>
    <span
      className="row-5"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 400,
        }
      }
    >
      5
    </span>
    <span
      className="row-6"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 500,
        }
      }
    >
      6
    </span>
  </div>
</div>
`;

exports[`should render with height as px 1`] = `
<div
  className="c-virtual-list-container"
  style={
    Object {
      "height": 400,
      "overflowX": "auto",
      "width": "100vw",
      "willChange": "transform",
    }
  }
>
  <div
    className="c-virtual-list"
    style={
      Object {
        "height": 10000000,
        "minHeight": "100%",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <span
      className="row-1"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      1
    </span>
  </div>
</div>
`;

exports[`should render with reversed 30 rows. 1`] = `
<div>
  <div>
    <span
      className="row-1"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      1
    </span>
    <span
      className="row-2"
      style={
        Object {
          "bottom": 100,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      2
    </span>
    <span
      className="row-3"
      style={
        Object {
          "bottom": 200,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      3
    </span>
    <span
      className="row-4"
      style={
        Object {
          "bottom": 300,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      4
    </span>
    <span
      className="row-5"
      style={
        Object {
          "bottom": 400,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      5
    </span>
    <span
      className="row-6"
      style={
        Object {
          "bottom": 500,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      6
    </span>
  </div>
</div>
`;
